--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.7
   google_fonts: ^5.1.0
+  get: ^4.6.5
+  shared_preferences: ^2.1.2
 
 dev_dependencies:
   flutter_test:
