--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   bloc: ^8.1.2
   flutter_bloc: ^8.1.3
   hydrated_bloc: ^9.1.2
+  path_provider: ^2.0.15
 
 dev_dependencies:
   flutter_test:
