--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   hydrated_bloc: ^9.1.2
   path_provider: ^2.0.15
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
